--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -106,7 +106,7 @@
   color: $accent-color;
   background: transparent;
   padding: 1rem 1.5rem;
-  border-radius: 1rem;
+  // border-radius: 1rem;
   border: $accent-color solid 2px;
 
   &::after {
@@ -117,7 +117,7 @@
     color: #a89983;
     border: #a89983 solid 2px;
     text-decoration: none;
-    border-radius: 2.5rem;
+    border-radius: 1.8rem;
 
     &::after {
       width: 100%;
