--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 // COLORS
 
 // Gruvbox-ish
-$accent-color: #68948a;
+$accent-color: #baa697;
 $background-color: #32302f;
 $foreground-color: #ebdbb2;
 $navbar-color: #242423;
