--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -23,6 +23,6 @@ body {
   scroll-behavior: smooth !important;
 
   &::selection {
-    background: #655b53;
+    background: darken($accent-color, 20%);
   }
 }
