--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -30,8 +30,7 @@
   }
 
   .link {
-    // color: $accent-color;
-    color: $foreground-color;
+    color: $accent-color;
     pointer-events: all;
 
     &:hover {
